# orme-lab

./: .gitignore  README.md  app.js  cube.js  eigenstate.js  hypotheses.js  index.html  metrics.js  pyproject.toml  requirements.txt  scientist.js  sim.js  styles.css
docs/: CHARTER.md  epw-ir-lambda-run.md  epw-live-validation.md  epw-orbital-order-run.md  hudson_claim_ledger.md  hypothesis_matrix.md  ir-doublet-control-experiment.md  patent-claim-tests.md  simulation_pipeline.md  terminology_translation.md  validation_tests.md
examples/: plot_candidate_density.py  run_gold_cluster_screen.py  run_platinum_cluster_screen.py
notebooks/: 00_project_overview.ipynb  01_hypothesis_mapping.ipynb
scripts/: ir_epw_ctl.sh  ir_epw_supervisor.sh  orme-ir-epw.service  run_ir_epw.py
tests/: test_backends.py  test_branch_verdict.py  test_control_experiment.py  test_coupling.py  test_electromagnetic_coherence.py  test_elements.py  test_epw_allen_dynes.py  test_epw_approximant.py  test_epw_backend.py  test_epw_config.py  test_epw_deck_complete.py  test_epw_ir_run.py  test_epw_parse.py  test_epw_pgm.py  test_epw_pipeline.py  test_epw_qe_input.py  test_epw_result.py  test_epw_runner.py  test_epw_spectral.py  test_evidence.py  test_free_electron_density.py  test_hudson_ledger.py  test_hudson_optical.py  test_identity.py  test_ir_contaminant.py  test_ir_signature.py  test_ledger_parity.py  test_ledger_render_smoke.py  test_lineage.py  test_magnetic_drive.py  test_mechanisms.py  test_meissner_field.py  test_observables.py  test_orbital_acceptance.py  test_orbital_backend.py  (+19 more)
(+135 files in other folders)
